kubernetes/mediaplayback/ersatztv/ersatztv.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersatztv
  namespace: mediaplayback
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: "true"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 24h"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ersatztv
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ersatztv
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      # Ensuring that the zvol that gets attached through iscsi is formatted with filesystem
      containers:
      - name: ersatztv
        image: ghcr.io/ersatztv/ersatztv:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
            gpu.intel.com/i915: "1"
          limits:
            memory: "6Gi"
            cpu: "3500m"
            gpu.intel.com/i915: "1"
        
        startupProbe:
          httpGet:
            path: /
            port: 8409
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 30
          successThreshold: 1
        
        readinessProbe:
          httpGet:
            path: /
            port: 8409
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        
        livenessProbe:
          httpGet:
            path: /
            port: 8409
          initialDelaySeconds: 60
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
          successThreshold: 1
        
        ports:
        - name: http
          containerPort: 8409
          protocol: TCP
            
        volumeMounts:
        - name: ersatztv-config
          mountPath: /config
        - name: transcode-cache
          mountPath: /transcode
      
      volumes:
      - name: ersatztv-config
        persistentVolumeClaim:
          claimName: ersatztv-pvc
      - name: transcode-cache
        emptyDir:
          medium: Memory
          sizeLimit: 6Gi
